[gd_scene load_steps=11 format=3 uid="uid://bwljrfuy6vdyv"]

[ext_resource type="Script" path="res://scenes/overworld/LevelController/level_controller.gd" id="1_3k3cd"]
[ext_resource type="PackedScene" uid="uid://c4cd64ehcd1k5" path="res://scenes/overworld/Level Segments/segment_5.tscn" id="2_fh2jk"]
[ext_resource type="PackedScene" uid="uid://df7i7bdii488l" path="res://scenes/overworld/Level Segments/segment_1.tscn" id="2_innyt"]
[ext_resource type="PackedScene" uid="uid://cep0dag1168yp" path="res://scenes/overworld/Level Segments/segment_4.tscn" id="2_t6xnc"]
[ext_resource type="PackedScene" uid="uid://87vrpjx835yl" path="res://scenes/overworld/Level Segments/segment_7.tscn" id="3_m0t14"]
[ext_resource type="PackedScene" uid="uid://buxjbtcr71nqi" path="res://scenes/overworld/Level Segments/segment_2.tscn" id="3_uf2aw"]
[ext_resource type="PackedScene" uid="uid://pj0mxgk1rsrm" path="res://scenes/ui/game_over_ui/game_over_ui.tscn" id="4_ovsk0"]
[ext_resource type="PackedScene" uid="uid://brjdiatxdjwgf" path="res://scenes/game_objects/Level Objects/segment_switch.tscn" id="5_toa1x"]
[ext_resource type="PackedScene" uid="uid://b8ko2gy1iy5gv" path="res://scenes/overworld/Level Segments/segment_3.tscn" id="6_8qbm2"]
[ext_resource type="PackedScene" uid="uid://blkhxo1r1iepb" path="res://scenes/overworld/Level Segments/segment_6.tscn" id="9_kt5qf"]

[node name="LevelController" type="Node2D" groups=["foreground_layer"]]
script = ExtResource("1_3k3cd")

[node name="Segment-6" parent="." instance=ExtResource("9_kt5qf")]
position = Vector2(1554, -94)

[node name="Segment-7" parent="." instance=ExtResource("3_m0t14")]
position = Vector2(2034, -94)

[node name="Segment-5" parent="." instance=ExtResource("2_fh2jk")]
position = Vector2(1554, 162)

[node name="Segment-4" parent="." instance=ExtResource("2_t6xnc")]
position = Vector2(1043, 162)

[node name="Segment-3" parent="." instance=ExtResource("6_8qbm2")]
position = Vector2(1015, 162)

[node name="Segment-2" parent="." instance=ExtResource("3_uf2aw")]
position = Vector2(535, 162)

[node name="Segment-1" parent="." groups=["segment_group"] instance=ExtResource("2_innyt")]
position = Vector2(71, 1)

[node name="UICanvasLayer" type="CanvasLayer" parent="."]

[node name="GameOverUi" parent="UICanvasLayer" instance=ExtResource("4_ovsk0")]
visible = false

[node name="SegmentSwitch" parent="." instance=ExtResource("5_toa1x")]
position = Vector2(649, 590)
scale = Vector2(0.25, 1)
from = 2
to = 1

[node name="SegmentSwitch2" parent="." instance=ExtResource("5_toa1x")]
position = Vector2(1121, 556)
scale = Vector2(0.25, 1)
from = 2
to = 3

[node name="SegmentSwitch3" parent="." instance=ExtResource("5_toa1x")]
position = Vector2(1603, 666)
scale = Vector2(0.25, 10)
from = 3
to = 4

[node name="SegmentSwitch4" parent="." instance=ExtResource("5_toa1x")]
position = Vector2(2099, 650)
scale = Vector2(0.25, 10)
from = 4
to = 5

[node name="SegmentSwitch5" parent="." instance=ExtResource("5_toa1x")]
position = Vector2(2347, 528)
scale = Vector2(60, 0.25)
from = 5
to = 6

[node name="SegmentSwitch6" parent="." instance=ExtResource("5_toa1x")]
position = Vector2(2594, 332)
scale = Vector2(0.25, 3)
from = 6
to = 7

[node name="SegmentSwitch7" parent="." instance=ExtResource("5_toa1x")]
position = Vector2(3037, 275)
scale = Vector2(8, 0.25)
from = 7
to = 8
